# leanclr

./: .clang-format  .gitignore  LICENSE  README.md  README_EN.md  format-cpp-files.bat
src/runtime/: CMakeLists.txt  build.bat  build.sh  build_config.h  common_header.h  common_header_small.h  const_strs.h  generate-vs-sln.bat  rt_base.h
src/runtime/alloc/: general_allocation.h  general_allocator.h  mem_pool.h  metadata_allocation.cpp  metadata_allocation.h
src/runtime/core/: rt_err.h  rt_result.h
src/runtime/gc/: garbage_collector.cpp  garbage_collector.h
src/runtime/icalls/: icall_base.h  internal_call_stubs.cpp  internal_call_stubs.h  interop.cpp  interop.h  mono_runtimeclasshandle.cpp  mono_runtimeclasshandle.h  mono_runtimegptrarrayhandle.cpp  mono_runtimegptrarrayhandle.h  mono_runtimemarshal.cpp  mono_runtimemarshal.h  mono_safestringmarshal.cpp  mono_safestringmarshal.h  system_appdomain.cpp  system_appdomain.h  system_argiterator.cpp  system_argiterator.h  system_array.cpp  system_array.h  system_buffer.cpp  system_buffer.h  system_currentsystemtimezone.cpp  system_currentsystemtimezone.h  system_datetime.cpp  system_datetime.h  system_delegate.cpp  system_delegate.h  system_diagnostics_debugger.cpp  system_diagnostics_debugger.h  system_diagnostics_stackframe.cpp  system_diagnostics_stackframe.h  system_diagnostics_stacktrace.cpp  system_diagnostics_stacktrace.h  system_enum.cpp  system_enum.h  system_environment.cpp  system_environment.h  system_exception.cpp  system_exception.h  system_gc.cpp  (+81 more)
src/runtime/interp/: basic_block_splitter.cpp  basic_block_splitter.h  eval_stack_op.h  hl_opcodes.h  hl_transformer.cpp  hl_transformer.h  il_opcodes.cpp  il_opcodes.h  interp_defs.cpp  interp_defs.h  interpreter.cpp  interpreter.h  ll_opcodes.cpp  ll_opcodes.h  ll_transformer.cpp  ll_transformer.h  machine_state.cpp  machine_state.h  transform_defs.h
src/runtime/intrinsics/: intrinsic_stubs.cpp  intrinsic_stubs.h  system_array.cpp  system_array.h  system_numerics_vector.cpp  system_numerics_vector.h  system_object.cpp  system_object.h  system_readonlyspan.cpp  system_readonlyspan.h  system_span.cpp  system_span.h  system_string.cpp  system_string.h  system_threading_interlocked.cpp  system_threading_interlocked.h  system_threading_volatile.cpp  system_threading_volatile.h
src/runtime/log/: internal_logger.cpp  internal_logger.h
src/runtime/metadata/: cli_image.cpp  cli_image.h  cli_metadata.h  generic_metadata.cpp  generic_metadata.h  layout.cpp  layout.h  metadata_cache.cpp  metadata_cache.h  metadata_compare.cpp  metadata_compare.h  metadata_const.cpp  metadata_const.h  metadata_hash.cpp  metadata_hash.h  metadata_name.cpp  metadata_name.h  module_def.cpp  module_def.h  pdb_image.cpp  pdb_image.h  pe_image_reader.cpp  pe_image_reader.h  rt_metadata.cpp  rt_metadata.h
src/runtime/misc/: rng_crypto_service_provider.cpp  rng_crypto_service_provider.h
src/runtime/os/: architecture.cpp  architecture.h  rt_time.cpp  rt_time.h
src/runtime/pal/: hardware.h
src/runtime/public/: leanclr.h  leanclr.hpp
src/runtime/public_impl/: leanclr.cpp  leanclr_hpp.cpp
src/runtime/utils/: binary_reader.h  hash_util.h  hashmap.h  hashset.h  mem_op.h  mem_pool.h  not_free_list.h  platform.h  (+7 more)
(+507 files in other folders)
